# sfml-particles

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: Config.h  FlowFields.hpp  Framerate.hpp  HSBtoRGB.hpp  Particle.hpp  ValueNoise.hpp  main.cpp
